# qqbot

./: .dockerignore  .env  .env.test  .gitignore  Dockerfile  README.md  deps.ts  docker-compose.yml  index.ts  main.py  pyproject.toml  taskfile.yaml
.github/workflows/: deploy_to_vps.yml
db/: db.ts  mutex.ts  mutex_test.ts
plugins/: 360pic.ts  carbon_code_pic.ts  cat_dog.ts  es_search.ts  gushi.ts  mao.ts  mod.ts  qqmusic.ts  rayso_code.ts  rayso_code_url.ts  utils.ts  zhenghen.ts
src/plugins/chatgpt/: __init__.py  chat_history.py  config.py  openai_chat.py  prompt_builder.py  session.py  singleton.py  tools.py
src/plugins/chatgpt/tools/: __init__.py  tool.py  tools.py
src/plugins/weather/: __init__.py
